--- a/Umm/src/App.css
+++ b/Umm/src/App.css
@@ -26,6 +26,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    color: black;
 }
 
 .screen-container {
@@ -239,7 +240,9 @@ button {
     width: 100%;
     border: 0;
     padding: 15px;
-    color: #ffffff;
+    /* color: #ffffff;
+     */
+    color: black;
     font-size: 14px;
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
@@ -280,4 +283,64 @@ button:hover,
 .header > .message a {
     color: #ffffff;
     font-weight: 700;
+}
+
+/* ----------------------------- */
+
+/* App.css */
+.calendar-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 900px; /* 적절한 너비로 설정 */
+    margin: 0 auto; /* 가운데 정렬 */
+}
+
+.react-calendar {
+    width: 100%;
+    max-width: 500px; /* 달력의 최대 너비 설정 */
+    margin-right: 20px; /* 달력과 체크박스 사이의 간격 */
+}
+
+.checkbox-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr); /* 7일 기준 */
+    gap: 5px; /* 체크박스 간의 간격 */
+    align-items: center;
+    justify-content: center;
+}
+
+.checkbox-cell {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+    margin: 5%;
+}
+
+.barchart-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.centered-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.calendar-container .react-calendar {
+    font-family: Arial, sans-serif; /* 달력 요일의 글꼴 설정 */
+    font-size: 14px; /* 달력 요일의 글꼴 크기 설정 */
+    color: black; /* 달력 요일의 텍스트 색상 설정 */
+    /* 다른 스타일링을 여기에 추가할 수 있습니다. */
 }
