--- a/Umm/src/component/KakaoMap.html
+++ b/Umm/src/component/KakaoMap.html
@@ -5,7 +5,7 @@
         <title>키워드로 장소검색하기</title>
     </head>
     <body>
-        <div id="map" style="width: 100%; height: 350px"></div>
+        <div id="map" style="width: 100%; height: 100%"></div>
 
         <script
             type="text/javascript"
